2008-03-07  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.10-rc1

2008-03-05  Paul J Stevens <paul@nfg.nl>

	* man/dbmail-imapd.txt:
	adjust manpage dbmail-imapd after asciidoc update
	* README.usermap:
	update README for usermap
	* db.c, misc.c:
	fix the usermap logic
	* dbmail-message.c:
	rebuild grelation headercache

2008-03-04  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	make internal grelation table of headers case insensitive

2008-02-09  Paul J Stevens <paul@nfg.nl>

	* VERSION, debian/changelog, debian/po/ja.po, imap4.c, timsieve.c:
	version 2.2.9
	* db.c:
	prevent regression in icheck_physmessages
	* debian/po/ja.po:
	update japanese debian po file

2008-01-21  Paul J Stevens <paul@nfg.nl>

	* db.c:
	use outer join instead of subselect during icheck_physmessages

2008-01-20  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_message.c, dbmail-mailbox.c:
	do from escaping during export
	* dbmail-message.c:
	allocate less and fix firstline logic

2008-01-20  Paul J Stevens <paul@nfg.nl>

	* VERSION, debian/changelog:
	2.2.9rc1
	* dbmail-message.c:
	prevent possible segfault

2008-01-19  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	call register_header from dbmail_message_set_header (aaron)

2008-01-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	make body searches case-sensitive to accomodate postgresql

2008-01-07  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	fix another segfault during export (bug #668)

2008-01-03  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	use join compatible with mysql 4.1 during export
	* dbmail-mailbox.c:
	fix segfault (bug #668)
	* man/dbmail-users.8:
	update generated manpage

2007-12-17  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, dbmail-message.c:
	do not add From_ header as part of the message during insertion
	* check_dbmail_message.c, dbmail-mailbox.c:
	add a missing case of dm_strtoull in dbmail_mailbox_get_set

2007-12-16  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c: